--- a/Project.toml
+++ b/Project.toml
@@ -1,20 +1,6 @@
-name = "MyFirstPackage"
+name = "AppliedAnalysis"
 uuid = "e7745c82-4fbe-443c-8374-89e667945f3a"
 version = "0.1.0"
 
 [deps]
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
-PauliOperators = "be646426-f34c-4536-b1d4-a45a9633e6db"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-TypedPolynomials = "afbbf031-7a57-5f58-a1b9-b774a0fad08d"
-UnitaryPruning = "944e96c2-c6c9-4ba0-b69d-e026960c3e5f"
-
-[compat]
-BenchmarkTools = "1.6.0"
-HDF5 = "0.17.2"
-StatProfilerHTML = "1.6.0"
-Test = "1.11.0"
-TypedPolynomials = "0.4.1"
